--- a/src/ui/AddCopyOfBook.fxml
+++ b/src/ui/AddCopyOfBook.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="center" hgap="10" prefHeight="320.0" prefWidth="621.0" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.AddCopyOfBookInit">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="ui.AddCopyOfBookInit">
   <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
    <children>
      
@@ -23,11 +23,11 @@
         </children>
      </HBox>
      
-     <Text fx:id="actiontarget" text="Display" wrappingWidth="247.1630859375" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+     <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="5" />
    </children>
    <columnConstraints>
-      <ColumnConstraints maxWidth="72.0" minWidth="47.0" prefWidth="53.0" />
-      <ColumnConstraints maxWidth="196.0" minWidth="171.0" prefWidth="190.0" />
+      <ColumnConstraints />
+      <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints />
