--- a/src/ui/AddCopyOfBook.fxml
+++ b/src/ui/AddCopyOfBook.fxml
@@ -23,7 +23,7 @@
         </children>
      </HBox>
      
-     <Text fx:id="actiontarget" text="DISPLAY AERA" wrappingWidth="249.97412109375" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+     <Text fx:id="actiontarget" wrappingWidth="249.97412109375" GridPane.columnSpan="2" GridPane.rowIndex="5" />
    </children>
    <columnConstraints>
       <ColumnConstraints maxWidth="77.0" minWidth="46.0" prefWidth="64.0" />
