--- a/src/ui/CheckOutBookForm.fxml
+++ b/src/ui/CheckOutBookForm.fxml
@@ -1,8 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane fx:id="pnCheckOutForm" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.CheckOutBookFormInit">
+   <children>
+      <AnchorPane fx:id="pnSubCheckOutForm" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="490.0">
+         <children>
+            <Label fx:id="lblMemberId" layoutX="25.0" layoutY="28.0" text="MemberID" />
+            <TextField fx:id="txtMemberId" layoutX="89.0" layoutY="24.0" />
+            <Label fx:id="lblISBN" layoutX="252.0" layoutY="28.0" text="ISBN" />
+            <TextField fx:id="txtISBN" layoutX="294.0" layoutY="24.0" />
+            <Button fx:id="btnCheckOut" layoutX="25.0" layoutY="64.0" mnemonicParsing="false" onAction="#checkOutForm" prefHeight="25.0" prefWidth="87.0" text="Check out" />
+            <Label fx:id="lblNotify" layoutX="124.0" layoutY="68.0" prefHeight="17.0" prefWidth="345.0" text="Check out successfully." textFill="#1db522">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
+            <ScrollPane fx:id="pnCheckOutRecord" layoutX="6.0" layoutY="102.0" prefHeight="297.0" prefWidth="461.0">
+               <content>
+                  <VBox fx:id="vbCheckOutRecord" prefHeight="293.0" prefWidth="442.0">
+                     <children>
+                        <Label fx:id="lblStudentName" alignment="TOP_CENTER" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="StudentName">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <TableView fx:id="tblCheckOutRecord" prefHeight="257.0" prefWidth="439.0">
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                           <columns>
+                              <TableColumn fx:id="thBook" editable="false" prefWidth="62.0" text="Book" />
+                              <TableColumn fx:id="thCopyNumber" editable="false" prefWidth="88.0" text="CopyNumber" />
+                              <TableColumn fx:id="thCheckOutDate" editable="false" prefWidth="113.0" text="CheckOutDate" />
+                              <TableColumn fx:id="thDueDate" editable="false" prefWidth="113.0" text="DueDate" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </VBox>
+               </content>
+            </ScrollPane>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
-
