--- a/src/ui/AddNewLibraryMember.fxml
+++ b/src/ui/AddNewLibraryMember.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -12,7 +13,8 @@
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="440.0" minWidth="10.0" prefWidth="313.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="51.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="28.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -23,15 +25,15 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Member ID:" />
-      <Label text="First name:" GridPane.rowIndex="1" />
-      <Label text="Last name:" GridPane.rowIndex="2" />
-      <Label text="Street:" GridPane.rowIndex="3" />
-      <Label text="City:" GridPane.rowIndex="4" />
-      <Label text="State:" GridPane.rowIndex="5" />
-      <Label text="Zip:" GridPane.rowIndex="6" />
-      <Label text="Telephone number:" GridPane.rowIndex="7" />
-      <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+      <Label text="Member ID:" GridPane.rowIndex="1" />
+      <Label text="First name:" GridPane.rowIndex="2" />
+      <Label text="Last name:" GridPane.rowIndex="3" />
+      <Label text="Street:" GridPane.rowIndex="4" />
+      <Label text="City:" GridPane.rowIndex="5" />
+      <Label text="State:" GridPane.rowIndex="6" />
+      <Label text="Zip:" GridPane.rowIndex="7" />
+      <Label text="Telephone number:" GridPane.rowIndex="8" />
+      <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
          <children>
             <Button fx:id="btnClear" mnemonicParsing="false" onAction="#clearInput" prefWidth="60.0" text="Clear" />
             <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addUser" prefWidth="60.0" text="Add" />
@@ -43,16 +45,21 @@
             <Insets top="10.0" />
          </padding>
       </HBox>
-      <TextField fx:id="txtMemberID" GridPane.columnIndex="1" />
-      <TextField fx:id="txtFirstName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <TextField fx:id="txtLastName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <TextField fx:id="txtStreet" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextField fx:id="txtCity" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <TextField fx:id="txtState" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <TextField fx:id="txtZip" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <TextField fx:id="txtPhoneNumber" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <TextField fx:id="txtMemberID" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <TextField fx:id="txtFirstName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <TextField fx:id="txtLastName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <TextField fx:id="txtStreet" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <TextField fx:id="txtCity" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <TextField fx:id="txtState" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <TextField fx:id="txtZip" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <TextField fx:id="txtPhoneNumber" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="58.0" prefWidth="450.0" text="User Information Form" GridPane.columnSpan="2">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
    <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
    </padding>
 </GridPane>
