--- a/src/ui/AddCopyOfBook.fxml
+++ b/src/ui/AddCopyOfBook.fxml
@@ -13,7 +13,7 @@
      
      <Text id="welcome-text" text="Please input a copy of book" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
      
-     <Label text="ISDN:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+     <Label text="ISBN:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
      
      <TextField fx:id="textISDN" GridPane.columnIndex="1" GridPane.rowIndex="1" />
      
