--- a/src/ui/Login.fxml
+++ b/src/ui/Login.fxml
@@ -18,7 +18,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <GridPane alignment="CENTER" hgap="5.0" layoutX="90.0" layoutY="68.0" prefHeight="152.0" prefWidth="275.0" vgap="10.0">
+      <GridPane alignment="CENTER" hgap="5.0" layoutX="90.0" layoutY="68.0" prefHeight="82.0" prefWidth="272.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="79.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="171.0" />
@@ -26,19 +26,21 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="32.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="51.0" minHeight="10.0" percentHeight="0.0" prefHeight="16.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="User Name:" />
             <Label text="Password:" GridPane.rowIndex="1" />
             <TextField fx:id="txtUsername" GridPane.columnIndex="1" />
-            <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="90.0" text="Log In" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
+      <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" layoutX="252.0" layoutY="150.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="100.0" text="Log In">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
