--- a/src/ui/MainFrame.fxml
+++ b/src/ui/MainFrame.fxml
@@ -18,6 +18,7 @@
             </Label>
             <Text fx:id="txtUserName" layoutX="606.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sophanna" wrappingWidth="108.20426940917969" />
             <Label layoutX="527.0" layoutY="23.0" prefHeight="26.0" prefWidth="70.0" text="User name:" />
+            <Button fx:id="btnLogout" layoutX="679.0" layoutY="24.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
          </children>
       </AnchorPane>
       <SplitPane fx:id="sppFunction" dividerPositions="0.3" prefHeight="544.0" prefWidth="737.0">
@@ -25,9 +26,9 @@
             <VBox fx:id="menu" fillWidth="false" spacing="15.0">
                <children>
                   <Button fx:id="btnAddNewLibraryMember" mnemonicParsing="false" onAction="#addNewLibraryMember" prefHeight="26.0" prefWidth="195.0" text="Add new library member" />
-                  <Button fx:id="btnViewAllLibraryMembers" mnemonicParsing="false" onAction="#viewAllLibraryMembers" prefHeight="26.0" prefWidth="194.0" text="View all library members" />
-                  <Button fx:id="btnAddCopyExistingBook" mnemonicParsing="false" onAction="#addACopyOfExistingBook" prefHeight="26.0" prefWidth="195.0" text="Add a copy of existing book" />
                   <Button fx:id="btnCheckoutBook" mnemonicParsing="false" onAction="#checkoutABook" prefHeight="26.0" prefWidth="195.0" text="Checkout a book" />
+                  <Button fx:id="btnAddCopyExistingBook" mnemonicParsing="false" onAction="#addACopyOfExistingBook" prefHeight="26.0" prefWidth="195.0" text="Add a copy of existing book" />
+                  <Button fx:id="btnViewAllLibraryMembers" mnemonicParsing="false" onAction="#viewAllLibraryMembers" prefHeight="26.0" prefWidth="194.0" text="View all library members" />
                </children>
                <opaqueInsets>
                   <Insets />
