--- a/src/ui/CheckOutBookForm.fxml
+++ b/src/ui/CheckOutBookForm.fxml
@@ -15,16 +15,11 @@
             <Label fx:id="lblISBN" layoutX="252.0" layoutY="28.0" text="ISBN" />
             <TextField fx:id="txtISBN" layoutX="294.0" layoutY="24.0" />
             <Button fx:id="btnCheckOut" layoutX="25.0" layoutY="64.0" mnemonicParsing="false" onAction="#checkOutForm" prefHeight="25.0" prefWidth="87.0" text="Check out" />
-            <Label fx:id="lblNotify" layoutX="124.0" layoutY="68.0" prefHeight="17.0" prefWidth="345.0" text="Check out successfully." textFill="#1db522">
-               <font>
-                  <Font name="System Bold Italic" size="12.0" />
-               </font>
-            </Label>
             <ScrollPane fx:id="pnCheckOutRecord" layoutX="6.0" layoutY="102.0" prefHeight="297.0" prefWidth="461.0">
                <content>
                   <VBox fx:id="vbCheckOutRecord" prefHeight="293.0" prefWidth="442.0">
                      <children>
-                        <Label fx:id="lblStudentName" alignment="TOP_CENTER" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="StudentName">
+                        <Label fx:id="lblStudentName" alignment="TOP_CENTER" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
