--- a/src/ui/MainFrame.fxml
+++ b/src/ui/MainFrame.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainFrameInit">
+<VBox fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="765.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainFrameInit">
    <children>
       <AnchorPane fx:id="header" prefHeight="60.0" prefWidth="685.0">
          <children>
@@ -16,9 +17,17 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Text fx:id="txtUserName" layoutX="606.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sophanna" wrappingWidth="108.20426940917969" />
-            <Label layoutX="527.0" layoutY="23.0" prefHeight="26.0" prefWidth="70.0" text="User name:" />
-            <Button fx:id="btnLogout" layoutX="679.0" layoutY="24.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
+            <Text fx:id="txtUserName" layoutX="535.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sophanna" wrappingWidth="108.20426940917969">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Text>
+            <Text fx:id="txtUserType" layoutX="653.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Librarian" wrappingWidth="90.37906646728516">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Text>
+            <Label layoutX="460.0" layoutY="36.0" text="User name:" />
+            <Label layoutX="611.0" layoutY="36.0" text="Type:" />
          </children>
       </AnchorPane>
       <SplitPane fx:id="sppFunction" dividerPositions="0.3" prefHeight="544.0" prefWidth="737.0">
@@ -29,6 +38,7 @@
                   <Button fx:id="btnCheckoutBook" mnemonicParsing="false" onAction="#checkoutABook" prefHeight="26.0" prefWidth="195.0" text="Checkout a book" />
                   <Button fx:id="btnAddCopyExistingBook" mnemonicParsing="false" onAction="#addACopyOfExistingBook" prefHeight="26.0" prefWidth="195.0" text="Add a copy of existing book" />
                   <Button fx:id="btnViewAllLibraryMembers" mnemonicParsing="false" onAction="#viewAllLibraryMembers" prefHeight="26.0" prefWidth="194.0" text="View all library members" />
+                  <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#logout" prefHeight="26.0" prefWidth="194.0" text="Log out" />
                </children>
                <opaqueInsets>
                   <Insets />
