--- a/src/ui/CheckOutBookForm.fxml
+++ b/src/ui/CheckOutBookForm.fxml
@@ -6,38 +6,38 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="pnCheckOutForm" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.CheckOutBookFormInit">
+<AnchorPane fx:id="pnCheckOutForm" prefHeight="571.0" prefWidth="659.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.CheckOutBookFormInit">
    <children>
-      <AnchorPane fx:id="pnSubCheckOutForm" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="490.0">
+      <AnchorPane fx:id="pnSubCheckOutForm" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="640.0">
          <children>
-            <Label fx:id="lblMemberId" layoutX="25.0" layoutY="28.0" text="MemberID" />
-            <TextField fx:id="txtMemberId" layoutX="89.0" layoutY="24.0" />
-            <Label fx:id="lblISBN" layoutX="252.0" layoutY="28.0" text="ISBN" />
-            <TextField fx:id="txtISBN" layoutX="294.0" layoutY="24.0" />
-            <Button fx:id="btnCheckOut" layoutX="25.0" layoutY="64.0" mnemonicParsing="false" onAction="#checkOutForm" prefHeight="25.0" prefWidth="87.0" text="Check out" />
-            <Label fx:id="lblNotify" layoutX="124.0" layoutY="68.0" prefHeight="17.0" prefWidth="345.0" text="Check out successfully." textFill="#1db522">
+            <Label fx:id="lblMemberId" layoutX="30.0" layoutY="29.0" text="MemberID" />
+            <TextField fx:id="txtMemberId" layoutX="112.0" layoutY="24.0" />
+            <Label fx:id="lblISBN" layoutX="336.0" layoutY="29.0" text="ISBN" />
+            <TextField fx:id="txtISBN" layoutX="388.0" layoutY="24.0" />
+            <Button fx:id="btnCheckOut" layoutX="30.0" layoutY="65.0" mnemonicParsing="false" onAction="#checkOutForm" prefHeight="30.0" prefWidth="111.0" text="Check out" />
+            <Label fx:id="lblNotify" layoutX="172.0" layoutY="72.0" prefHeight="17.0" prefWidth="345.0" text="Check out successfully." textFill="#1db522">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <ScrollPane fx:id="pnCheckOutRecord" layoutX="6.0" layoutY="102.0" prefHeight="297.0" prefWidth="461.0">
+            <ScrollPane fx:id="pnCheckOutRecord" layoutX="14.0" layoutY="102.0" prefHeight="428.0" prefWidth="605.0">
                <content>
-                  <VBox fx:id="vbCheckOutRecord" prefHeight="293.0" prefWidth="442.0">
+                  <VBox fx:id="vbCheckOutRecord" prefHeight="426.0" prefWidth="611.0">
                      <children>
-                        <Label fx:id="lblStudentName" alignment="TOP_CENTER" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="StudentName">
+                        <Label fx:id="lblStudentName" alignment="TOP_CENTER" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="616.0" text="StudentName">
                            <font>
-                              <Font name="System Bold" size="12.0" />
+                              <Font name="System Bold" size="19.0" />
                            </font>
                         </Label>
-                        <TableView fx:id="tblCheckOutRecord" prefHeight="257.0" prefWidth="439.0">
+                        <TableView fx:id="tblCheckOutRecord" prefHeight="391.0" prefWidth="611.0">
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                            <columns>
-                              <TableColumn fx:id="thBook" editable="false" prefWidth="62.0" text="Book" />
-                              <TableColumn fx:id="thCopyNumber" editable="false" prefWidth="88.0" text="CopyNumber" />
-                              <TableColumn fx:id="thCheckOutDate" editable="false" prefWidth="113.0" text="CheckOutDate" />
-                              <TableColumn fx:id="thDueDate" editable="false" prefWidth="113.0" text="DueDate" />
+                              <TableColumn fx:id="thBook" editable="false" prefWidth="191.0" text="Book" />
+                              <TableColumn fx:id="thCopyNumber" editable="false" prefWidth="113.0" text="CopyNumber" />
+                              <TableColumn fx:id="thCheckOutDate" editable="false" prefWidth="184.0" text="CheckOutDate" />
+                              <TableColumn fx:id="thDueDate" editable="false" prefWidth="119.0" text="DueDate" />
                            </columns>
                         </TableView>
                      </children>
