--- a/src/ui/Login.fxml
+++ b/src/ui/Login.fxml
@@ -7,40 +7,45 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="273.0" prefWidth="490.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.LoginInit">
+<AnchorPane prefHeight="355.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.LoginInit">
    <children>
       <AnchorPane fx:id="header" layoutX="10.0" layoutY="10.0" prefHeight="72.0" prefWidth="435.0">
          <children>
-            <Label layoutX="17.0" layoutY="-20.0" prefHeight="92.0" prefWidth="281.0" text="Library System">
+            <Label alignment="CENTER" layoutX="25.0" prefHeight="90.0" prefWidth="562.0" text="Library System">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="32.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <GridPane alignment="CENTER" hgap="5.0" layoutX="90.0" layoutY="68.0" prefHeight="82.0" prefWidth="272.0" vgap="10.0">
+      <GridPane alignment="CENTER" hgap="5.0" layoutX="59.0" layoutY="68.0" prefHeight="242.0" prefWidth="490.0" vgap="10.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="79.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="171.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="42.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="97.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="234.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="71.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="57.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="User Name:" />
-            <Label text="Password:" GridPane.rowIndex="1" />
-            <TextField fx:id="txtUsername" GridPane.columnIndex="1" />
-            <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label alignment="CENTER" prefHeight="20.0" prefWidth="93.0" text="User Name:" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label alignment="CENTER" prefHeight="20.0" prefWidth="92.0" text="Password:" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtUsername" prefHeight="30.0" prefWidth="226.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <PasswordField fx:id="txtPassword" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="232.0" text="Log In" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" layoutX="252.0" layoutY="150.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="100.0" text="Log In">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
