--- a/src/ui/MainFrame.fxml
+++ b/src/ui/MainFrame.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainFrameInit">
+<VBox fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainFrameInit">
    <children>
       <AnchorPane fx:id="header" prefHeight="60.0" prefWidth="685.0">
          <children>
@@ -16,18 +16,19 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Text fx:id="txtUserName" layoutX="606.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sophanna" wrappingWidth="108.20426940917969" />
-            <Label layoutX="527.0" layoutY="23.0" prefHeight="26.0" prefWidth="70.0" text="User name:" />
+            <Text fx:id="txtUserName" layoutX="533.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sophanna" wrappingWidth="108.20426940917969" />
+            <Label layoutX="423.0" layoutY="23.0" prefHeight="26.0" prefWidth="96.0" text="User name:" />
+            <Button fx:id="btnLogout" layoutX="808.0" layoutY="21.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
          </children>
       </AnchorPane>
-      <SplitPane fx:id="sppFunction" dividerPositions="0.3" prefHeight="544.0" prefWidth="737.0">
+      <SplitPane fx:id="sppFunction" dividerPositions="0.27616926503340755" prefHeight="544.0" prefWidth="737.0">
          <items>
-            <VBox fx:id="menu" fillWidth="false" spacing="15.0">
+            <VBox fx:id="menu" fillWidth="false" prefHeight="542.0" prefWidth="239.0" spacing="15.0">
                <children>
-                  <Button fx:id="btnAddNewLibraryMember" mnemonicParsing="false" onAction="#addNewLibraryMember" prefHeight="26.0" prefWidth="195.0" text="Add new library member" />
-                  <Button fx:id="btnViewAllLibraryMembers" mnemonicParsing="false" onAction="#viewAllLibraryMembers" prefHeight="26.0" prefWidth="194.0" text="View all library members" />
-                  <Button fx:id="btnAddCopyExistingBook" mnemonicParsing="false" onAction="#addACopyOfExistingBook" prefHeight="26.0" prefWidth="195.0" text="Add a copy of existing book" />
-                  <Button fx:id="btnCheckoutBook" mnemonicParsing="false" onAction="#checkoutABook" prefHeight="26.0" prefWidth="195.0" text="Checkout a book" />
+                  <Button fx:id="btnAddNewLibraryMember" mnemonicParsing="false" onAction="#addNewLibraryMember" prefHeight="30.0" prefWidth="225.0" text="Add new library member" />
+                  <Button fx:id="btnCheckoutBook" mnemonicParsing="false" onAction="#checkoutABook" prefHeight="26.0" prefWidth="225.0" text="Checkout a book" />
+                  <Button fx:id="btnAddCopyExistingBook" mnemonicParsing="false" onAction="#addACopyOfExistingBook" prefHeight="30.0" prefWidth="225.0" text="Add a copy of existing book" />
+                  <Button fx:id="btnViewAllLibraryMembers" mnemonicParsing="false" onAction="#viewAllLibraryMembers" prefHeight="26.0" prefWidth="225.0" text="View all library members" />
                </children>
                <opaqueInsets>
                   <Insets />
