--- a/src/ui/Login.fxml
+++ b/src/ui/Login.fxml
@@ -9,38 +9,39 @@
 
 <AnchorPane prefHeight="273.0" prefWidth="490.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.LoginInit">
    <children>
-      <AnchorPane fx:id="header" layoutX="10.0" layoutY="10.0" prefHeight="72.0" prefWidth="435.0">
+      <AnchorPane fx:id="header" layoutX="5.0" layoutY="10.0" prefHeight="72.0" prefWidth="479.0">
          <children>
-            <Label layoutX="17.0" layoutY="-20.0" prefHeight="92.0" prefWidth="281.0" text="Library System">
+            <Label alignment="CENTER" prefHeight="72.0" prefWidth="479.0" text="Library System">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="27.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <GridPane alignment="CENTER" hgap="5.0" layoutX="90.0" layoutY="68.0" prefHeight="82.0" prefWidth="272.0" vgap="10.0">
+      <GridPane alignment="CENTER" hgap="5.0" layoutX="109.0" layoutY="86.0" prefHeight="128.0" prefWidth="272.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="79.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="171.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="38.0" minHeight="4.0" prefHeight="13.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="User Name:" />
-            <Label text="Password:" GridPane.rowIndex="1" />
-            <TextField fx:id="txtUsername" GridPane.columnIndex="1" />
-            <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="78.0" text="User Name:" />
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="78.0" text="Password:" GridPane.rowIndex="1" />
+            <TextField fx:id="txtUsername" prefHeight="30.0" prefWidth="170.0" GridPane.columnIndex="1" />
+            <PasswordField fx:id="txtPassword" prefHeight="30.0" prefWidth="170.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="175.0" text="Log In" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" layoutX="252.0" layoutY="150.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="100.0" text="Log In">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
