--- a/src/ui/MainFrame.fxml
+++ b/src/ui/MainFrame.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="765.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainFrameInit">
+<VBox fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="638.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainFrameInit">
    <children>
       <AnchorPane fx:id="header" prefHeight="60.0" prefWidth="685.0">
          <children>
@@ -30,15 +30,15 @@
             <Label layoutX="611.0" layoutY="36.0" text="Type:" />
          </children>
       </AnchorPane>
-      <SplitPane fx:id="sppFunction" dividerPositions="0.3" prefHeight="544.0" prefWidth="737.0">
+      <SplitPane fx:id="sppFunction" dividerPositions="0.26296296296296295" prefHeight="564.0" prefWidth="812.0">
          <items>
-            <VBox fx:id="menu" fillWidth="false" spacing="15.0">
+            <VBox fx:id="menu" fillWidth="false" prefHeight="542.0" prefWidth="232.0" spacing="15.0">
                <children>
                   <Button fx:id="btnAddNewLibraryMember" mnemonicParsing="false" onAction="#addNewLibraryMember" prefHeight="26.0" prefWidth="195.0" text="Add new library member" />
                   <Button fx:id="btnCheckoutBook" mnemonicParsing="false" onAction="#checkoutABook" prefHeight="26.0" prefWidth="195.0" text="Checkout a book" />
                   <Button fx:id="btnAddCopyExistingBook" mnemonicParsing="false" onAction="#addACopyOfExistingBook" prefHeight="26.0" prefWidth="195.0" text="Add a copy of existing book" />
-                  <Button fx:id="btnViewAllLibraryMembers" mnemonicParsing="false" onAction="#viewAllLibraryMembers" prefHeight="26.0" prefWidth="194.0" text="View all library members" />
-                  <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#logout" prefHeight="26.0" prefWidth="194.0" text="Log out" />
+                  <Button fx:id="btnViewAllLibraryMembers" mnemonicParsing="false" onAction="#viewAllLibraryMembers" prefHeight="26.0" prefWidth="195.0" text="View all library members" />
+                  <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#logout" prefHeight="26.0" prefWidth="195.0" text="Log out" />
                </children>
                <opaqueInsets>
                   <Insets />
@@ -47,7 +47,7 @@
                   <Insets left="10.0" top="10.0" />
                </padding>
             </VBox>
-            <Pane fx:id="operation" prefHeight="526.0" prefWidth="547.0" />
+            <Pane fx:id="operation" prefHeight="563.0" prefWidth="594.0" />
          </items>
          <VBox.margin>
             <Insets />
