--- a/src/ui/MainFrame.fxml
+++ b/src/ui/MainFrame.fxml
@@ -17,7 +17,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Text fx:id="txtUserName" layoutX="535.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sophanna" wrappingWidth="108.20426940917969">
+            <Text fx:id="txtUserName" layoutX="512.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="77.20426940917969">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Text>
@@ -26,7 +26,7 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Text>
-            <Label layoutX="460.0" layoutY="36.0" text="User name:" />
+            <Label layoutX="460.0" layoutY="36.0" text="User ID:" />
             <Label layoutX="611.0" layoutY="36.0" text="Type:" />
          </children>
       </AnchorPane>
