--- a/src/ui/Login.fxml
+++ b/src/ui/Login.fxml
@@ -18,7 +18,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <GridPane alignment="CENTER" hgap="5.0" layoutX="109.0" layoutY="86.0" prefHeight="128.0" prefWidth="272.0" vgap="10.0">
+      <GridPane alignment="CENTER" hgap="5.0" layoutX="109.0" layoutY="73.0" prefHeight="101.0" prefWidth="272.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="79.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="171.0" />
@@ -26,22 +26,21 @@
         <rowConstraints>
           <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="38.0" minHeight="4.0" prefHeight="13.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label alignment="CENTER" prefHeight="17.0" prefWidth="78.0" text="User ID:" />
             <Label alignment="CENTER" prefHeight="17.0" prefWidth="78.0" text="Password:" GridPane.rowIndex="1" />
             <TextField fx:id="txtUsername" prefHeight="30.0" prefWidth="170.0" GridPane.columnIndex="1" />
             <PasswordField fx:id="txtPassword" prefHeight="30.0" prefWidth="170.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="175.0" text="Log In" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
+      <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" layoutX="277.0" layoutY="174.0" mnemonicParsing="false" onAction="#login" prefHeight="23.0" prefWidth="94.0" text="Log In">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
