--- a/src/ui/PrintBookRecordOfMember.fxml
+++ b/src/ui/PrintBookRecordOfMember.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="pnPrintBookRecord" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.PrintCheckoutRecord">
+<AnchorPane fx:id="pnPrintBookRecord" prefWidth="586.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.PrintCheckoutRecord">
    <children>
-      <AnchorPane fx:id="pnSubPrintBookRecord" layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="490.0">
+      <AnchorPane fx:id="pnSubPrintBookRecord" layoutX="42.0" layoutY="5.0" minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="490.0">
          <children>
-            <Label fx:id="lblMemberId" layoutX="25.0" layoutY="28.0" text="MemberID" />
-            <TextField fx:id="txtMemberId" layoutX="89.0" layoutY="24.0" />
-            <Button fx:id="btnPrintRecord" layoutX="260.0" layoutY="24.0" mnemonicParsing="false" onAction="#printCheckoutRecord" prefHeight="25.0" prefWidth="149.0" text="Print Checkout Record" />
+            <Label fx:id="lblMemberId" layoutX="90.0" layoutY="27.0" text="Member ID:" />
+            <TextField fx:id="txtMemberId" layoutX="167.0" layoutY="23.0" />
+            <Button fx:id="btnPrintRecord" layoutX="167.0" layoutY="62.0" mnemonicParsing="false" onAction="#printCheckoutRecord" prefHeight="26.0" prefWidth="163.0" text="Print Checkout Record" />
          </children>
       </AnchorPane>
    </children>
